--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -17,11 +17,11 @@
         <ul class="list-group">
           <li class="list-group">
             <div class="card">
-              <img class="card-img-bottom" src="/<%= @job.image_url %>" alt="Card image cap"><!-- ① -->
+              <img class="card-img-bottom" src="/<%= @job.image_url %>" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title"><%= @job.title %></h5>
                 <p class="card-text"><%= @job.content %></p>
-                <!-- ② -->
+
                 <p class="card-text"><small class="text-muted"><%= @job.created_at.strftime('%Y/%m/%d %H:%M')  %></small></p>
               </div>
             </div>
@@ -34,25 +34,42 @@
         </div>
         <p class="share-url"><a onclick="clipURL()" class="url-text">URL</a><i class="far fa-copy"></i></p>
       </div>
-      <% if user_signed_in? %> <!-- ③：ログインしている場合 -->
-        <% if @job.user_id == current_user.id %> <!-- ④：自分の作成した求人だった場合 -->
+      <% if user_signed_in? %>
+        <% if @job.user_id == current_user.id %>
           <div class="job-show-comment">
             <h2 class="job-list-title">応募一覧</h2>
             <ul class="list-group">
-              <%# ========== 後ほど応募情報を表示するところ ========== %>
+              <%= form_with model: [@job, @job.entries.new] do |f| %>
+                <%= f.hidden_field :job_id, value: @job.id %>
+                <div class="form-group form-message">
+                  <label for="exampleImputMessage">メッセージ（任意）</label>
+                  <%= f.text_area :messages, class: "form-control", placeholder: "例：興味あります。よければDMでご連絡お待ちしております。"  %>
+                </div>
+                <div class="intro-button text-center">
+                  <%= f.submit "応募する", class: "btn btn-xl" %>
+                </div>
+              <% end %>
             </ul>
           </div>
-        <% else -%> <!-- ④：自分の作成した求人でない場合 -->
-          <% if current_user.entries.where(job_id: @job.id).present? %><!-- ⑤すでに応募している場合 -->
+        <% else -%>
+          <% if current_user.entries.where(job_id: @job.id).present? %>
             <div class="intro-button text-center">
               <a href="javascript:void(0)" class="btn btn-xl">すでに応募しています</a>
             </div>
-            <% else %><!-- ⑤まだ応募していない場合 -->
-            <%# ========== 後ほど応募フォームを表示するところ ========== %>
-            <% end %><!-- ⑤ -->
-          <% end %><!-- ④ -->
+            <% else %>
+            <% @entries.each do |entry| %>
+              <li class="list-group-item">
+                <div><%= entry.user.email %><small class="text-muted"><%= entry.created_at.strftime('%Y/%m/%d %H:%M') %></small></div>
+                <div class="list-group-item-comment">
+                  <%= entry.messages %>
+                </div>
+              </li>
 
-        <% else %><!-- ③：ログインしていない場合 -->
+            <% end %>
+            <% end %>
+          <% end %>
+
+        <% else %>
         <div class="show-login text-center">
           <div class="intro-button text-center">
             <a href="/users/sign_in" class="btn btn-xl">応募する</a>
@@ -68,7 +85,7 @@
           <p>※ Twitterで応募した場合は「」で「すべてのユーザーからダイレクトメッセージを受信する」 にチェックを入れてください。</p>
           </ul>
         </div>
-        <% end %><!-- ③ -->
+        <% end %>
 
     </div>
   </div>
